--- a/esa.jsonc
+++ b/esa.jsonc
@@ -1,9 +1,17 @@
 {
   // ESA Pages 部署配置
-  // 构建输出的资源目录（必需）
-  "assets": "dist/assets",
-  // 函数文件路径（静态站点通常不需要，但必须配置）
-  "function": {
-    "js": ""
+  "name": "emergency-kit",
+  // 静态站点不需要 Edge 函数，设为空字符串
+  "entry": "",
+  // 安装依赖命令
+  "installCommand": "npm install",
+  // 构建命令
+  "buildCommand": "npm run build",
+  // 静态资源目录配置
+  "assets": {
+    // 构建输出的目录（包含 index.html 和 assets 文件夹）
+    "directory": "./dist",
+    // SPA 应用使用 singlePageApplication 策略
+    "notFoundStrategy": "singlePageApplication"
   }
 }
